codeforces/1017/a.out
a.cc: In function ‘void solve()’:
a.cc:21:31: error: invalid operands of types ‘int’ and ‘<unresolved overloaded function type>’ to binary ‘operator<<’
   21 |   cout << a[0] << b[0] << c[0 << endl;
      |                             ~~^~~~~~~
a.cc:21:38: error: expected ‘]’ before ‘;’ token
   21 |   cout << a[0] << b[0] << c[0 << endl;
      |                                      ^
      |                                      ]

[code]: 1
